--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.jordroid.android_cloud_2020">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
@@ -49,6 +48,10 @@
         <activity
             android:name=".firebase.view.FirebaseLoginActivity"
             android:parentActivityName=".view.MainActivity" />
+        <activity
+            android:name=".sensor.view.SensorActivity"
+            android:parentActivityName=".view.MainActivity" />
+
         <service
             android:name=".service.MyFirebaseMessagingService"
             android:exported="false">
